--- a/app/scss/modules/shared/_how-to.scss
+++ b/app/scss/modules/shared/_how-to.scss
@@ -1,4 +1,5 @@
 .how-to {
+    max-width: 80rem;
     margin-bottom: 7.5rem;
     padding: 0 $inner-pad-sm;
     text-align: center;
@@ -10,6 +11,7 @@
 
     @include breakpoint-up(large) {
         padding: 0 6.125rem;
+        margin: 0 5rem 7.5rem;
     }
 
     @include breakpoint-up(xlarge) {
@@ -167,7 +169,7 @@
     }
 
     @include breakpoint-up(large) {
-        margin: 0 2.5rem 10.5rem;
+        margin: 0 5rem 10.5rem;
         padding: 7.25rem $inner-pad-lg 6.25rem;
     }
 
